--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,23 +7,23 @@
     @include foundation-flex-grid;
     @include foundation-typography;
     @include foundation-button;
-    @include foundation-forms;
+   // @include foundation-forms;
     // @include foundation-range-input;
     //@include foundation-accordion;
     //@include foundation-accordion-menu;
     //@include foundation-badge;
     // @include foundation-breadcrumbs;
-    @include foundation-button-group;
+   // @include foundation-button-group;
     //@include foundation-callout;
     //@include foundation-card;
     @include foundation-close-button;
     @include foundation-menu;
     // @include foundation-menu-icon;
     // @include foundation-drilldown-menu;
-    @include foundation-dropdown;
-    @include foundation-dropdown-menu;
+    //@include foundation-dropdown;
+    //@include foundation-dropdown-menu;
     //@include foundation-responsive-embed;
-    @include foundation-label;
+    //@include foundation-label;
     // @include foundation-media-object;
     // @include foundation-off-canvas;
     // @include foundation-orbit;
@@ -44,23 +44,15 @@
     @include foundation-visibility-classes;
     @include foundation-float-classes;
     @include foundation-flex-classes;
-    @include motion-ui-transitions;
-    @include motion-ui-animations;
-    $primary-color-dark: #0288D1;
-    $primary-color: #03A9F4;
-    $primary-color-light: #B3E5FC;
-    $primary-color-text: #FFFFFF;
-    $accent-color: #FFC107;
-    $primary-text-color: #212121;
-    $secondary-text-color: #757575;
-    $divider-color: #BDBDBD;
-    $blackwhite:#808080;
-    @import 'components/helpers';
-    @import 'components/menuicon';
-    @import 'components/owl.carousel';
-    @import 'components/owl.theme.default';
-    @import 'components/animate';
-    @import url('https://fonts.googleapis.com/css?family=Montserrat:300');
+   // @include motion-ui-transitions;
+    //@include motion-ui-animations;
+
+    // @import 'components/helpers';
+    // @import 'components/menuicon';
+    // @import 'components/owl.carousel';
+    // @import 'components/owl.theme.default';
+    // @import 'components/animate';
+
     //font: Josefin Sans,QuckSand
     #siteContainer {
         position: relative;
@@ -80,357 +72,5 @@
             position: relative;
         }
     }
+
     
-    // #siteNavStickyContainer {
-    //     position: absolute;
-    //     left: 0;
-    //     right: 0;
-    //     width: 100%;
-    // }
-    .top-black-bar {
-        background-color: black;
-        color: rgba(255, 255, 255, 0.71);
-        padding: 0.2rem 1rem;
-        font-size: 0.7rem;
-    }
-    
-    .top-bar-before {
-        background: -moz-linear-gradient(top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
-        background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000', GradientType=0);
-        padding: 0;
-        display: flex;
-        align-items: center;
-        transition: all 0.2s ease-in;
-        .top-bar-title {
-            padding: 0.5rem;
-            img {
-                width: 100px;
-                height: auto;
-            }
-        }
-        // .header-dropdown-title {
-        //     // margin: 0 1rem;
-        //     min-width: 200px;
-        //     color: #fff;
-        //     transition: color 0.2s ease-in, background-color 0.2s ease-in;
-        //     &:hover {
-        //         background-color: #fff;
-        //         color: $primary-color;
-        //     }
-        // }
-        // .header-dropdown {
-        //     background-color: transparent;
-        // }
-        // .header-dropdown-menu {
-        //     background-color: white;
-        //     border: none;
-        //     a {
-        //         // white-space: nowrap;
-        //     }
-        //     //border-radius: 4px;
-        // }
-        .custom-dropdown {
-            margin: 0;
-            height: 100%;
-            list-style-type: none;
-            &>a {}
-        }
-        .header-dropdown-title {
-            color: white;
-            padding: 0.5rem 1rem;
-            // margin: 0 12px;
-            display: block;
-        }
-        .c-dropdown {
-            display: inline-flex;
-            align-items: center;
-            position: relative;
-            height: 100%;
-            &:hover {
-                .header-dropdown-title {
-                    background-color: #fff;
-                    font-weight: bold;
-                    color: slategray;
-                }
-            }
-        }
-        .request-quote {
-            background-color: $primary-color;
-            border-radius: 50px;
-            margin: 0 2rem 0;
-            white-space: nowrap;
-        }
-        .nav-container {
-            width: 100%;
-            text-align: center;
-            &>ul {
-                //background-color: transparent;
-            }
-        }
-    }
-    
-    .top-bar-after {
-        background-color: white;
-        box-shadow: 0px 0px 7px 0px #8c8c8c;
-        padding: 0;
-        display: flex;
-        align-items: stretch;
-        transition: all 0.2s ease-in;
-        .top-bar-title {
-            padding: 0.5rem;
-            img {
-                width: 300px;
-                height: auto;
-            }
-        }
-        // .header-dropdown-title {
-        //     // margin: 0 1rem;
-        //     min-width: 200px;
-        //     color: slategrey;
-        //     transition: color 0.2s ease-in, background-color 0.2s ease-in;
-        //     &:hover {
-        //         background-color: #fff;
-        //         color: $primary-color;
-        //     }
-        // }
-        // .header-dropdown {
-        //     background-color: transparent;
-        //     height: 100%;
-        // }
-        // .header-dropdown-menu {
-        //     background-color: white;
-        //     //border: 1px solid slategray;
-        //     border-top: 0px;
-        //     top: 99%!important;
-        //     box-shadow: 0px 3px 3px 0px rgba(140, 140, 140, 0.16), 0px 0px 0px 0px rgba(140, 140, 140, 0);
-        //     a {
-        //         // white-space: nowrap;
-        //     }
-        // }
-        .custom-dropdown {
-            margin: 0;
-            height: 100%;
-            list-style-type: none;
-            &>li {
-                display: inline-flex;
-                align-items: center;
-                position: relative;
-                height: 100%;
-            }
-            a {
-                // color: slategray;
-                // padding: 0 1rem;
-                // // margin: 0 12px;
-                // display: block;
-            }
-        }
-        .header-dropdown-title {
-            color: slategray;
-            padding: 0 1rem;
-            // margin: 0 12px;
-            display: block;
-        }
-        .c-dropdown {
-            &:hover {
-                border-bottom: 2px solid $primary-color-dark;
-                .header-dropdown-title {
-                    // background-color: #fff;
-                    // font-weight: bold;
-                    color: $primary-color-dark;
-                }
-            }
-        }
-        .request-quote {
-            background-color: $primary-color;
-            border-radius: 50px;
-            margin: 0 2rem 0;
-            white-space: nowrap;
-        }
-        .nav-container {
-            width: 100%;
-            text-align: center;
-            &>ul {
-                background-color: transparent;
-            }
-        }
-    }
-    
-    // .custom-dropdown {
-    //     margin: 0;
-    //     height: 100%;
-    //     list-style-type: none;
-    //     &>li {
-    //         display: inline-flex;
-    //         align-items: center;
-    //         position: relative;
-    //         height: 100%;
-    //     }
-    //     a {
-    //         padding: 0 12px;
-    //         margin: 0 12px;
-    //         display: block;
-    //     }
-    // }
-    .c-sub-menu {
-        z-index: 99;
-        display: none;
-        background-color: #fff!important;
-        position: absolute;
-        box-shadow: 0px 3px 3px 0px rgba(140, 140, 140, 0.16), 0px 0px 0px 0px rgba(140, 140, 140, 0);
-        top: 100%;
-        margin: 0;
-        width: auto;
-        min-width: 274px;
-        left: -50%;
-        // border: 1px solid $primary-color-light;
-        //border-top: 0px;
-        border-bottom: 5px solid $primary-color-dark;
-        li {
-            position: relative;
-            margin: 0;
-            display: block;
-            &:hover {
-                background-color: $light-gray;
-            }
-            &:last-child {
-                a {
-                    border-bottom: none;
-                }
-            }
-        }
-        a {
-            margin: 0 0.5rem;
-            white-space: nowrap;
-            color: #424242;
-            font-size: 0.9rem;
-            padding: 0.5rem 0;
-            display: block;
-            border-bottom: 1px solid $light-gray;
-            font-weight: light;
-        }
-        // &.big {
-        //     left: -50%;
-        // }
-    }
-    
-    .home-top-container {
-        padding: 3rem 0;
-        //background: url("../img/homebg.svg") no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        @include breakpoint(small only) {
-            padding: 3rem 0;
-        }
-    }
-    
-    .section-header {
-        margin-bottom: 2rem;
-        text-align: center;
-        .title {
-            // display: inline-block;
-            color: $blackwhite;
-            padding: 1rem;
-            letter-spacing: 2px;
-            // border-bottom: 1px solid $blackwhite;
-            font-family: 'Montserrat', sans-serif;
-            position: relative;
-            z-index: 1;
-            &:before {
-                border-top: 2px solid #dfdfdf;
-                content: "";
-                margin: 0 auto;
-                /* this centers the line to the full width specified */
-                position: absolute;
-                /* positioning must be absolute here, and relative positioning must be applied to the parent */
-                top: 50%;
-                left: 0;
-                right: 0;
-                bottom: 0;
-                width: 55%;
-                z-index: -1;
-            }
-            span {
-                background: #fff;
-                padding: 0 15px;
-            }
-        }
-    }
-    
-    .services-home {
-        .row {
-            transition: box-shadow 0.2s ease-in;
-            margin: 0.3rem;
-            padding: 2rem 0;
-            &:hover {
-                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.18);
-            }
-        }
-        .mobile {
-            background-color: #f9c389;
-        }
-        .offshore {
-            background-color: #86c1d9;
-        }
-        .web {
-            background-color: #f8b8ce
-        }
-        color: white;
-        padding: 0 0.3rem 3rem;
-        .title {
-            margin-top: 1rem;
-            font-weight: 100;
-        }
-        img {
-            height: 110px;
-            width: auto;
-        }
-        p {
-            font-size: 0.8rem;
-        }
-    }
-    
-    .portfolio-bg {
-        background: #f7f7f7;
-        transition: background 0.5s ease-in;
-        // background: -webkit-linear-gradient(to left, #485563, #29323c);
-        // background: linear-gradient(to left, #485563, #29323c);
-        padding: 3rem 0;
-    }
-    
-    .what-we-do {
-        margin-bottom: 2rem;
-        .title {
-            font-weight: 300;
-            color: $primary-color;
-        }
-        img {
-            width: 250px;
-        }
-    }
-    
-    footer {
-        background-color: black;
-        padding: 3rem;
-        margin-top: 5rem;
-    }
-    
-    .footer-form {
-        .title {
-            color: white;
-            font-weight: 300;
-        }
-        .input-col {}
-        label {
-            color: $secondary-text-color;
-        }
-        .input-col {}
-        input {
-            margin-bottom: 0;
-            border-radius: 2px;
-        }
-        textarea {
-            border-radius: 2px;
-        }
-    }
