--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,86 +1,12 @@
 <div id="siteNavStickyContainer" data-sticky-container style="">
     <div id="siteNavStickyWrap" class="sticky" data-sticky data-sticky-on="small" data-anchor="siteContainer" data-margin-top="0">
-        <div class="top-black-bar text-right">
-            CONTACT-US:+91 750 765 1099, +91 904 997 2789
-        </div>
         <div id="siteNavToggler" class="title-bar" data-responsive-toggle="siteNav" data-hide-for="medium">
-            <div class="top-bar-title">
-                <img id="" src="{{root}}assets/img/logo_gen_h.svg" alt="Genora logo">
-            </div>
-            <div>
-                <svg preserveAspectRatio: "none" height="70" width="70" id="menu-icon" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 200 200">
-                    <line id="f_line" class="cls-1" x1="63.4" y1="78.4" x2="136.6" y2="78.4" />
-
-                    <line id="t_line" class="cls-1" x1="63.4" y1="121.6" x2="136.6" y2="121.6" />
-                    <path id="c_path" class="cls-1 cpath-ini" d="M63.4,100h73.3s50.2,1,11.2-47.8a67.7,67.7,0,1,0,0,95.7,67.7,67.7,0,0,0,0-95.7"
-                    />
-                </svg>
-            </div>
+          
         </div>
-        <div id="siteNav" class="top-bar top-bar-before">
-            <div class="top-bar-title">
-                <img id="logoImage" src="{{root}}assets/img/logo_gen.svg" alt="Genora logo">
-            </div>
-            <div class="nav-container">
-                <div class="row  align-center height100">
-                    <div class="column "></div>
-                    <!--<div class="column small-12 medium-12 large-7">
-                        <ul class="dropdown menu expanded align-center header-dropdown" data-dropdown-menu data-click-open="true" data-closing-time="50">
-                            <li>
-                                <a href="#" class="header-dropdown-title">WHO WE ARE</a>
-                                <ul class="menu header-dropdown-menu ">
-                                    <li><a href="#">Our Journey</a></li>
-                                    <li><a href="#">Our Vision</a></li>
-                                    <li><a href="#">Reach Us</a></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#" class="header-dropdown-title">WHAT WE DO</a>
-                                <ul class="menu header-dropdown-menu">
-                                    <li><a href="#">Mobile Apps Development</a></li>
-                                    <li><a href="#">Offshore IT Setup</a></li>
-                                    <li><a href="#">Software Application Development</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#" class="header-dropdown-title">CAREER</a></li>
-                        </ul>
-                    </div>-->
-                    <div class="column small-12 medium-12 large-7">
-                        <ul class="custom-dropdown">
-                            <li class="c-dropdown">
-                                <a href="#" class="header-dropdown-title">WHO WE ARE</a>
-                                <ul class="c-sub-menu">
-                                    <li><a href="#">Our Journey</a></li>
-                                    <li><a href="#">Our Vision</a></li>
-                                    <li><a href="#">Reach Us</a></li>
-                                </ul>
-                            </li>
-                            <li class="c-dropdown">
-                                <a href="#" class="header-dropdown-title">WHAT WE DO</a>
-                                <ul class="c-sub-menu big">
-                                    <li><a href="#">Mobile Apps Development</a></li>
-                                    <li><a href="#">Offshore IT Setup</a></li>
-                                    <li><a href="#">Software Application Development</a></li>
-                                </ul>
-                            </li>
-                            <li class="c-dropdown">
-                                <a href="#" class="header-dropdown-title">CAREER</a>
-
-
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="column "></div>
-                </div>
-            </div>
-            <div class="flex-center">
-                <a href="#features" class="button request-quote">Request a Quote</a>
-            </div>
+        <div id="siteNav" class="top-bar">
+          
+          
+           
         </div>
     </div>
 </div>
-<!--<div class="row expanded">  
-
-
-</div>-->
