--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<div id="siteNavStickyContainer" data-sticky-container style="">
+<!--<div id="siteNavStickyContainer" data-sticky-container style="">
     <div id="siteNavStickyWrap" class="sticky" data-sticky data-sticky-on="small" data-anchor="siteContainer" data-margin-top="0">
         <div id="siteNavToggler" class="title-bar" data-responsive-toggle="siteNav" data-hide-for="medium">
           
@@ -9,4 +9,19 @@
            
         </div>
     </div>
-</div>
+</div>-->
+<!--<div class="top-bar">
+    <div class="top-bar-left">
+        <ul class="dropdown menu" data-dropdown-menu>
+            <li class="menu-text">Site Title</li>
+
+
+        </ul>
+    </div>
+    <div class="top-bar-right">
+        <ul class="menu">
+            <li><a href="#">Two</a></li>
+            <li><a href="#">Three</a></li>
+        </ul>
+    </div>
+</div>-->
