--- a/src/assets/scss/components/_helpers.scss
+++ b/src/assets/scss/components/_helpers.scss
@@ -1,6 +1,9 @@
 .whitefont{
     color: white;
 }
+.zeromargin{
+    margin: 0 !important;
+}
 .zero-bottom-margin{
     margin-bottom: 0!important;
 }
