--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -52,8 +52,9 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
-$body-background: $white;
-$body-font-color: $black;
+// $body-background: $white;
+$body-background: #1d1d1d;
+$body-font-color: $white;
 $body-font-family: 'Open Sans','Helvetica Neue',Helvetica,Roboto,Arial,sans-serif;
 $body-antialiased: true;
 $global-margin: 1rem;
