--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -79,7 +79,7 @@
       // justify-content: space-between;
       height: 100vh;
       position: relative;
-      background: url("../img/spaceback1.jpg") no-repeat;
+      background: url("../img/patternbg.svg") no-repeat;
       background-size: cover;
       &:before {
         content: "";
