--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -182,7 +182,7 @@
       .name {
         margin: 0;
         padding: 1rem 0;
-     //   border-bottom: 1px solid $namebordercolor;
+        //   border-bottom: 1px solid $namebordercolor;
         font-family: 'Open Sans', 'Helvetica', sans-serif;
         font-weight: 300;
       }
@@ -190,19 +190,59 @@
       .dev {
         margin: 0;
         padding: 1rem 0;
+        
       }
       .desig {
         // border-right: 1px solid $namebordercolor;
-        background-color: #e91e63;
+        background-color: #03a9f4;
         h5 {
           font-family: 'Petit Formal Script', cursive;
+           animation: designAnim 4s linear infinite;
         }
       }
       .dev {
         background-color: #9e9e9e;
         h5 {
           font-family: 'Space Mono', monospace;
+          &:after {
+          content: "|";
+          width: 1px;
+          height: 1em;
+          animation: caretPulsate 1s linear infinite;
+          }
         }
+      }
+    }
+    @keyframes designAnim {
+      0%{
+        transform: scale(1,1);
+      }
+      25%{
+        transform: scale(1,1.2);
+      }
+      50%{
+        transform: rotate(20deg);
+      }
+      75%{
+        transform: rotate(0deg);
+      }
+      100%{
+        transform: scale(1,1);
+      }
+    }
+    
+    @keyframes caretPulsate {
+      0% {
+        opacity: 1;
+      }
+      50% {
+        opacity: 1;
+      }
+      60% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 0;
       }
     }
     
