--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -198,6 +198,8 @@
         h5 {
           font-family: 'Petit Formal Script', cursive;
            animation: designAnim 4s linear infinite;
+		    animation-iteration-count: infinite;
+  transform-origin: 50% 50%;
         }
       }
       .dev {
@@ -214,21 +216,39 @@
       }
     }
     @keyframes designAnim {
-      0%{
-        transform: scale(1,1);
-      }
-      25%{
-        transform: scale(1,1.2);
-      }
-      50%{
-        transform: rotate(20deg);
-      }
-      75%{
-        transform: rotate(0deg);
-      }
-      100%{
-        transform: scale(1,1);
-      }
+        0% {
+    transform:  translate(0px,0px)  scaleX(1.00) scaleY(1.00) ;
+  }
+  10% {
+    transform:  translate(2px,1px)  scaleX(2.00) scaleY(1.00) ;
+  }
+  20% {
+    transform:  translate(3px,3px)  scaleX(1.00) scaleY(1.00) ;
+  }
+  30% {
+    transform:  translate(5px,4px)  scaleX(1.28) scaleY(1.28) ;
+  }
+  40% {
+    transform:  translate(6px,5px)  scaleX(1.00) scaleY(1.28) ;
+  }
+  50% {
+    transform:  translate(7px,7px)  scaleY(1.00) ;
+  }
+  60% {
+    transform:  translate(9px,8px)  scaleX(-1.00) ;
+  }
+  70% {
+    transform:  translate(10px,9px)  scaleX(1.00) ;
+  }
+  80% {
+    transform:  translate(12px,11px)  ;
+  }
+  90% {
+    transform:  translate(12px,12px)  ;
+  }
+  100% {
+    transform:  translate(0px,0px)  scaleX(1.00) scaleY(1.00) ;
+  }
     }
     
     @keyframes caretPulsate {
