--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -79,7 +79,7 @@
       // justify-content: space-between;
       height: 100vh;
       position: relative;
-      background: url("../img/patternbg.svg") no-repeat;
+      background: url("../img/island.png") no-repeat;
       background-size: cover;
       &:before {
         content: "";
@@ -190,44 +190,44 @@
       .dev {
         margin: 0;
         padding: 1rem 0;
-        
       }
       .desig {
         // border-right: 1px solid $namebordercolor;
         background-color: #03a9f4;
         h5 {
           font-family: 'Petit Formal Script', cursive;
-           animation: designAnim 4s linear infinite;
+          animation: designAnim 4s linear infinite;
         }
       }
       .dev {
         background-color: #9e9e9e;
         h5 {
-          font-family: 'Space Mono', monospace;
+          font-family: Consolas, 'Liberation Mono', Courier, monospace;
           &:after {
-          content: "|";
-          width: 1px;
-          height: 1em;
-          animation: caretPulsate 1s linear infinite;
+            content: "|";
+            width: 1px;
+            height: 1em;
+            animation: caretPulsate 1s linear infinite;
           }
         }
       }
     }
+    
     @keyframes designAnim {
-      0%{
-        transform: scale(1,1);
+      0% {
+        transform: scale(1, 1);
       }
-      25%{
-        transform: scale(1,1.2);
+      25% {
+        transform: scale(1, 1.2);
       }
-      50%{
+      50% {
         transform: rotate(20deg);
       }
-      75%{
+      75% {
         transform: rotate(0deg);
       }
-      100%{
-        transform: scale(1,1);
+      100% {
+        transform: scale(1, 1);
       }
     }
     
